WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172560
[macOS WK2 Debug] Layout Test webrtc/video.html is crashing.
https://bugs.webkit.org/show_bug.cgi?id=172560
Summary
[macOS WK2 Debug] Layout Test webrtc/video.html is crashing.
Matt Lewis
Reported
2017-05-24 16:19:48 PDT
Created
attachment 311165
[details]
Crash Log The test webrtc/video.html is crashing a high amount on macOS WK2 Debug. It looks to have originated with:
https://trac.webkit.org/changeset/217317/webkit
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=webrtc%2Fvideo.html
https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/r217379%20(1181)/results.html
https://build.webkit.org/builders/Apple%20Sierra%20Debug%20WK2%20(Tests)/builds/1181
Attachments
Crash Log
(103.45 KB, text/plain)
2017-05-24 16:19 PDT
,
Matt Lewis
no flags
Details
Patch
(3.01 KB, patch)
2017-05-24 21:40 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lewis
Comment 1
2017-05-24 16:23:19 PDT
The correct revision: (In reply to Matt Lewis from
comment #0
)
> Created
attachment 311165
[details]
> Crash Log > > The test webrtc/video.html is crashing a high amount on macOS WK2 Debug. > > It looks to have originated with: >
https://trac.webkit.org/changeset/217317/webkit
> >
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard
. > html#showAllRuns=true&tests=webrtc%2Fvideo.html > >
https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/
>
r217379
%20(1181)/results.html >
https://build.webkit.org/builders/Apple%20Sierra%20Debug%20WK2%20(Tests)/
> builds/1181
Sorry that was the wrong revision. The correct revision is
r217311
https://trac.webkit.org/changeset/217311/webkit
Radar WebKit Bug Importer
Comment 2
2017-05-24 18:06:31 PDT
<
rdar://problem/32392611
>
youenn fablet
Comment 3
2017-05-24 18:34:45 PDT
(In reply to Radar WebKit Bug Importer from
comment #2
)
> <
rdar://problem/32392611
>
Thanks for filing this. The patch you pointed needs further tweaking. Autoplay should not be reevaluated when capturing stops.
youenn fablet
Comment 4
2017-05-24 21:40:21 PDT
Created
attachment 311194
[details]
Patch
WebKit Commit Bot
Comment 5
2017-05-25 08:50:41 PDT
Comment on
attachment 311194
[details]
Patch Clearing flags on attachment: 311194 Committed
r217422
: <
http://trac.webkit.org/changeset/217422
>
WebKit Commit Bot
Comment 6
2017-05-25 08:50:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug