[macOS WK2 Debug] Layout Test webrtc/video.html is crashing. https://bugs.webkit.org/show_bug.cgi?id=172560 <rdar://problem/32392611>

Patch by youenn fablet <youenn@apple.com> on 2017-05-25
Reviewed by Eric Carlson.

webrtc/multiple-video.html is no longer crashing.

Allow autoplay only from going to not capture to capture, and not the reverse.
Renamed HTMLMediaElement::mediaStreamCaptureStateChanged to mediaStreamCaptureStarted.

* dom/Document.cpp:
(WebCore::Document::mediaStreamCaptureStateChanged):
* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaStreamCaptureStateChanged): Deleted.
* html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::mediaStreamCaptureStarted):

Canonical link: https://commits.webkit.org/189487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217422 268f45cc-cd09-0410-ab3c-d52691b4dbfc